--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,13 @@
                             </div>
                             <div class="car-mart-col-s-2 no-spaces small-devices navigation-toggle">
                                <ul class="car-mart-dark">
-                                  <li><a href="index.html" class="active">
+                                  <li><a href="index.html" >
                                         <span class="car-mart-icons-20 car-mart-icons-home-dark"></span> Home </a></li>
                                   <li><a href="categories.html"> 
                                         <span class="car-mart-icons-20 car-mart-icons-category"></span> Category </a></li>
                                   <li><a href="alls.html">
                                       <span class="car-mart-icons-20 car-mart-icons-cars"></span> All Cars </a></li>
-                                  <li><a href="contact.html">
+                                  <li><a href="contact.html" class="active">
                                       <span class="car-mart-icons-20 car-mart-icons-info"></span> Contact us </a></li>
                                </ul>
                                 <div class="car-mart-row ">
@@ -112,7 +112,7 @@
             <div class="car-mart-row no-spaces large-devices">
                 <div class="navigation" class="car-mart-col-s-12">
                     <nav>
-                        <a href="index.html" class="active">
+                        <a href="index.html" >
                             <span class="car-mart-icons-20 car-mart-icons-home"></span> Home </a>
                         <a href="categories.html" class="Medium-device"> 
                             <span class="car-mart-icons-20 car-mart-icons-category-dark"></span> Category </a>
@@ -120,7 +120,7 @@
                             <span class="car-mart-icons-20 car-mart-icons-cars-dark"></span> All Cars </a>
                         <a href="#" class="Medium-device">
                             <span class="car-mart-icons-20 car-mart-icons-orders-dark"></span> POST Ad </a>
-                        <a href="Contact.html" class="Medium-device last-element">
+                        <a href="Contact.html" class="active" class="Medium-device last-element">
                             <span class="car-mart-icons-20 car-mart-icons-info-dark"></span> Contact us </a>
                         <a href="#" class="Medium-device-show last-element More-Menus">
                             <img src="assets/img/menu-alt.png">
