--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>:: CAR Mart ::</title>
+        <title>:: AUTO Mart::</title>
         <meta charset="UTF-8">
         <meta name="description" content="Auto Mart For Selling and Buying Cars">
         <meta name="keywords" content=" Buy And Sell Cars ">
@@ -77,9 +77,9 @@
                                <ul class="car-mart-dark">
                                   <li><a href="index.html" class="active">
                                         <span class="car-mart-icons-20 car-mart-icons-home-dark"></span> Home </a></li>
-                                  <li><a href="categories.html"> 
+                                  <li><a href="categories.html" > 
                                         <span class="car-mart-icons-20 car-mart-icons-category"></span> Category </a></li>
-                                  <li><a href="alls.html">
+                                  <li><a href="allcars.html">
                                       <span class="car-mart-icons-20 car-mart-icons-cars"></span> All Cars </a></li>
                                   <li><a href="contact.html">
                                       <span class="car-mart-icons-20 car-mart-icons-info"></span> Contact us </a></li>
@@ -117,9 +117,9 @@
                     <nav>
                         <a href="index.html" class="active">
                             <span class="car-mart-icons-20 car-mart-icons-home"></span> Home </a>
-                        <a href="categories.html" class="Medium-device"> 
+                        <a href="categories.html"  class="Medium-device"> 
                             <span class="car-mart-icons-20 car-mart-icons-category-dark"></span> Category </a>
-                        <a href="alls.html" class="Medium-device">
+                        <a href="allcars.html" class="Medium-device">
                             <span class="car-mart-icons-20 car-mart-icons-cars-dark"></span> All Cars </a>
                         <a href="#" class="Medium-device">
                             <span class="car-mart-icons-20 car-mart-icons-orders-dark"></span> POST Ad </a>
@@ -134,7 +134,7 @@
                                    </a>
                                 </li>
                                 <li> 
-                                   <a href="alls.html.html">
+                                   <a href="allcars.html">
                                       <span class="car-mart-icons-20 car-mart-icons-cars-dark"></span> All Cars
                                    </a>
                                 </li>
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="car-mart-col-s-12 pipslide">
-                        <img src="images/img2.jpg">
+                        <img src="images/img12.jpg">
                         <div class="slide_datas">
                             <h3> Vintage Cars</h3>
                             <button class="search-btn bottom-button"> See More </button>
