--- a/admin.html
+++ b/admin.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>menu admin</title>
+		<title>Responsive vertical menu navigation</title>
 		
 		<link rel="stylesheet" href="css/main.css">
 
@@ -13,29 +12,29 @@
 	<body>
 		<div class="header">
 			<div class="logo">
-				<span>Auto Mart</span>
+				<span>AUTO Mart</span>
 			</div>
 			<a href="#" class="nav-trigger"><span></span></a>
 		</div>
 		<div class="side-nav">
 			<div class="logo">
-				<span>Auto Mart</span>
+				<span>Car Mart</span>
 			</div>
 			<nav>
 				<ul>
-					<li class="active">
-						<a href="#">
+					<li>
+						<a href="index.html">
 							<span>Dashboard</span>
 						</a>
 					</li>
-					<li>
+					<li class="active">
 						<a href="users.html">
 							<span>Users</span>
 						</a>
 					</li>
                     <li>
 						<a href="#">
-							<span>Vehicles</span>
+							<span>Products</span>
 						</a>
 					</li>
 					<li>
@@ -59,18 +58,62 @@
 			</div>
 			
 			<div class="main">
-				<div class="widget">
-					<div class="title">120 Total Vehicles</div>
-					<div> 
-                      Just checking how these content will appear in this div
-					</div>
+				<div class='white-background' style="width:100%">
+					<table>
+						<thead>
+							<tr>
+							   <th>N<sup>o</sup></th>
+							   <th>Username</th>
+							   <th>Full name</th>
+							   <th>Status</th>
+							   <th>Role</th>
+							   <th>More details</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+							   <td>1</td>
+							   <td>lievin_ihame</td>
+							   <td>Ihame Lievin</td>
+							   <td>Active</td>
+							   <td>Customer</td>
+							   <td><a href='#'>View</a></td>
+							</tr>
+							<tr>
+							   <td>2</td>
+							   <td>lievin_ihame</td>
+							   <td>Ihame Lievin</td>
+							   <td>Active</td>
+							   <td>Customer</td>
+							   <td><a href='#'>View</a></td>
+							</tr>
+							<tr>
+							   <td>3</td>
+							   <td>lievin_ihame</td>
+							   <td>Ihame Lievin</td>
+							   <td>Active</td>
+							   <td>Customer</td>
+							   <td><a href='#'>View</a></td>
+							</tr>
+							<tr>
+							   <td>4</td>
+							   <td>lievin_ihame</td>
+							   <td>Ihame Lievin</td>
+							   <td>Active</td>
+							   <td>Customer</td>
+							   <td><a href='#'>View</a></td>
+							</tr><tr>
+							   <td>5</td>
+							   <td>lievin_ihame</td>
+							   <td>Ihame Lievin</td>
+							   <td>Active</td>
+							   <td>Customer</td>
+							   <td><a href='#'>View</a></td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
-				<div class="widget">
-					<div class="title">5 Pending Orders</div>
-				</div>
-				<div class="widget">
-					<div class="title">69 Registered Users</div>
-				</div>
+				
 			</div>
 		</div>
 	</body>
